--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "date-fns": "^2.16.1",
-    "react-datepicker": "^3.3.0"
+    "multiselect-react-dropdown": "^1.6.2",
+    "react-datepicker": "^3.3.0",
+    "react-multiselect-checkboxes": "^0.1.1"
   }
 }
