--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
     "axios": "^0.21.0",
     "polished": "^4.0.5",
     "react": "^16.13.1",
+    "react-async": "^10.0.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^4.1.0",
     "react-persist": "^1.0.2",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
