--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.21.0",
+    "material-ui": "^0.20.2",
     "polished": "^4.0.5",
     "react": "^16.13.1",
     "react-async": "^10.0.1",
