--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
+    "classnames": "^2.2.6",
     "date-fns": "^2.16.1",
     "multiselect-react-dropdown": "^1.6.2",
     "react-datepicker": "^3.3.0",
